updating z-index issue

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -42,11 +42,13 @@
           box-sizing: border-box;
           padding: 10px;
           background-color: #E2E2E2;
-          z-index: -1;
+          z-index: 1;
           min-width: 200px;
         }
         ol{
           @include transition(transform 0.6s);
+          position: relative;
+          z-index: 2;
           & > li{
             display: inline-block;
             vertical-align: top;
